02-sg/main.tf
module "db"{
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "security group for DB MYSQL instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value # storing vpc_id in aws_ssm_parameter
    common_tags = var.common_tags
    sg_name = "db"
}
# here security groups are created based on vpc_id which will be stored in the aws_ssm_parameter 
module "backend"{
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "security group for backend instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "backend"
}
module "frontend"{
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "security group for frotend instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "frontend"
}

module "bastion"{
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "security group for bastion instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "bastion"
}
module "ansible"{
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "security group for ansible instances"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "ansible"
}
#DB is accepting connections from backend
# allowing only 3306 port traffic of db from the instances which are created on sg(expense-dev-backend)
# Thus building a connection between db and backend by creating the new inbound rules in db, which will connects to backend
resource "aws_security_group_rule" "db_backend" {
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.backend.sg_id # source refers to where you getting traffic from i..e sg(expense-dev-backend)
  security_group_id = module.db.sg_id #creating inboound rule in db security group
}

#DB is accepting connections from bastion
# allowing only 3306 port traffic of db from the instances which are created on sg(expense-dev-bastion)
# Thus building a connection between db and bastion by creating the new inbound rules in db, which will connects to bastion 
resource "aws_security_group_rule" "db_bastion" {
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id # source refers to where you getting traffic from i..e sg(expense-dev-bastion)
  security_group_id = module.db.sg_id #creating inboound rule in db security group
}

#backend is accepting connections from frontend
# allowing only 8080 port traffic of backend from the instances which are created on sg(expense-dev-frontend)
# Thus building a connection between backend and frontend by creating the new inbound rules in backend, which will connects to frontend 
resource "aws_security_group_rule" "backend_frontend" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  source_security_group_id = module.frontend.sg_id # source refers to where you getting traffic from i..e sg(expense-dev-frontend)
  security_group_id = module.backend.sg_id #creating inboound rule in backend security group
}

resource "aws_security_group_rule" "backend_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id # source refers to where you getting traffic from i..e sg(expense-dev-frontend)
  security_group_id = module.backend.sg_id
}
resource "aws_security_group_rule" "backend_ansible" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.ansible.sg_id # source refers to where you getting traffic from i..e sg(expense-dev-frontend)
  security_group_id = module.backend.sg_id #creating inboound rule in backend security group
}
# frontend is accepting connections from public
# allowing only 80 port traffic of frontend from public
resource "aws_security_group_rule" "frontend_public" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # source refers to where you getting traffic from public(internet)
  security_group_id = module.frontend.sg_id #creating inboound rule in frontend security group
}

resource "aws_security_group_rule" "frontend_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id # source refers to where you getting traffic from public
  security_group_id = module.frontend.sg_id 
}
resource "aws_security_group_rule" "frontend_ansible" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.ansible.sg_id # source refers to where you getting traffic from public
  security_group_id = module.frontend.sg_id #creating inboound rule in frontend security group
}

# bastion to public
resource "aws_security_group_rule" "bastion_public" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # source refers to where you getting traffic from public
  security_group_id = module.bastion.sg_id #creating inboound rule in bastion security group
}

# ansible to public
resource "aws_security_group_rule" "ansible_public" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # source refers to where you getting traffic from public
  security_group_id = module.ansible.sg_id #creating inboound rule in ansible security group
}
